--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,6 +17,12 @@
       "program": "${workspaceFolder}/exercise-type-checker/src/type-check-entry5.js",
       "request": "launch",
       "type": "node"
+    },
+    {
+      "name": "压缩混淆",
+      "program": "${workspaceFolder}/exercise-mangle-compress/src/index.js",
+      "request": "launch",
+      "type": "node"
     }
   ]
 }
